Fix white space problem when table active.

--- a/packages/editor/src/client/blocks/richTextBlockTable.less
+++ b/packages/editor/src/client/blocks/richTextBlockTable.less
@@ -1,4 +1,5 @@
 table {
+  white-space: pre;
   width: 100%;
   margin: 10px;
   table-layout: fixed;
